--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@angular/forms": "^20.2.0",
     "@angular/platform-browser": "^20.2.0",
     "@angular/router": "^20.2.0",
+    "@types/marked": "^5.0.2",
+    "highlight.js": "^11.11.1",
+    "marked": "^16.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
